test/fail/UnboundTypeVariable.curry
data A a = A { funA :: a -> b }

type B b = (c, b)
